tests/vertical-slice/reject/hashmap_new_turbofish_arity_mismatch.hew
// HashMap takes exactly two type arguments: key and value.
fn main() -> i64 {
    let _m = HashMap::<i64>::new();
    0
}
